[build-system]
requires = [
    "hatchling",
    "ipywidgets>7,<9",
    "jupyterlab>=3.4",
]
build-backend = "hatchling.build"

[project]
name = "nbtools"
description = "Framework for creating user-friendly Jupyter notebooks, accessible to both programming and non-programming users alike."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Thorin Tabor", email = "tmtabor@cloud.ucsd.edu" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "ipyuploads",
    "ipywidgets>7,<9",
    "jupyterlab>=3.4",
]
version = "23.3.2"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://github.com/g2nb/nbtools"

[tool.hatch.build]
artifacts = [
    "nbtools/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"nbtools/nbextension/static" = "share/jupyter/nbextensions/nbtools"
"nbtools/labextension/static" = "share/jupyter/labextensions/@g2nb/nbtools/static"
"nbtools/labextension/schemas/@g2nb/nbtools" = "share/jupyter/labextensions/@g2nb/nbtools/schemas/@g2nb/nbtools"
"install.json" = "share/jupyter/labextensions/@g2nb/nbtools/install.json"
"nbtools/labextension/build_log.json" = "share/jupyter/labextensions/@g2nb/nbtools/build_log.json"
"nbtools/labextension/package.json" = "share/jupyter/labextensions/@g2nb/nbtools/package.json"
"nbtools/nbtools.json" = "share/jupyter/nbtools/nbtools.json"
jupyter-config = "etc/jupyter/nbconfig/notebook.d"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "nbtools/labextension/static/style.js",
    "nbtools/labextension/package.json",
]
skip-if-exists = [
    "nbtools/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "nbtools/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:all"
npm = [
    "jlpm",
]

[tool.tbump]
github_url = "https://github.com/g2nb/nbtools"

[tool.tbump.version]
current = "23.3.2"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+))?
  (\.
    (?P<dev>dev\d*)
  )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}\""

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}\""
